--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "prebuild": "node scripts/mirror-images.mjs || true",
-    "build": "npx vite build",
-    "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "prebuild": "node scripts/mirror-images.mjs",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
