--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,40 +2,18 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-<<<<<<< HEAD
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
-=======
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
->>>>>>> 594970dac7d465e7561ad26e158595f2901255eb
     "module": "ESNext",
     "skipLibCheck": true,
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+
+    "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-<<<<<<< HEAD
-    "noFallthroughCasesInSwitch": true,
-    "types": [
-      "vite/client"
-    ]
+    "types": ["vite/client"]
   },
-  "include": [
-    "src",
-    "scripts"
-  ]
+  "include": ["src"]
 }
-=======
-    "noFallthroughCasesInSwitch": true
-  },
-  "include": ["**/*.ts", "**/*.tsx"]
-}
->>>>>>> 594970dac7d465e7561ad26e158595f2901255eb
